// Copyright 2022 The Tari Project
// SPDX-License-Identifier: BSD-3-Clause

syntax = "proto3";

package tari.transaction_protocol;

message TransactionCancelledMessage {
    // The transaction id for the cancelled transaction
    uint64 tx_id = 1;
}

